Bug fixes - Fixed overflowing - Minor improvements

--- a/src/index.css
+++ b/src/index.css
@@ -34,10 +34,6 @@
   font-weight: 400;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 section {
   position: relative;
   min-height: 100vh;
