--- a/src/sections/landing/styles.css
+++ b/src/sections/landing/styles.css
@@ -11,7 +11,7 @@
 
 #landing {
   overflow: hidden;
-  width: 100vw;
+  width: 100%;
 
   position: fixed;
   inset: 0;
@@ -21,7 +21,7 @@
 #landing .description-container {
   position: absolute;
   inset: 0;
-  width: 100vw;
+  width: 100%;
   height: 100%;
 
   display: flex;
