--- a/src/sections/section4/styles.css
+++ b/src/sections/section4/styles.css
@@ -5,6 +5,9 @@
 
   z-index: 25;
 
+  width: 100%;
+  overflow: hidden;
+
   opacity: 0;
   transition: opacity 0.2s ease-out;
 }
